--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Gemini_Generated_Image_uk2ftpuk2ftpuk2f.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VOID</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
